fix padding-alignment issue of items w/more text

--- a/src/components/menuItem/MenuItem.scss
+++ b/src/components/menuItem/MenuItem.scss
@@ -3,15 +3,16 @@
 .menuItem {
 	display: flex;
 	justify-content: center;
-	align-items: baseline;
+	align-items: center;
 	color: $icon-color;
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Ubuntu,
 		Helvetica Neue, sans-serif, Apple Color Emoji, Segoe UI Emoji,
 		Segoe UI Symbol;
 	font-weight: 300;
 	cursor: pointer;
-	padding: 14px 8px;
-	min-height: 30px;
+	padding: 0 10px;
+	min-height: 60px;
+	max-height: 60px;
 	min-width: 75px;
 	border-top-left-radius: 5px;
 	border-top-right-radius: 5px;
@@ -29,23 +30,5 @@
 
 	&:hover .arrow {
 		transform: rotate(3.142rad);
-	}
-
-	.cart-totalItems {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		color: $icon-color;
-		background-color: red;
-		font-size: 14px;
-		position: relative;
-		bottom: 15px;
-		border-radius: 50%;
-		height: 20px;
-		width: 20px;
-	}
-
-	.cart-icon {
-		font-size: 22px;
 	}
 }
